--- a/src/index.scss
+++ b/src/index.scss
@@ -5,9 +5,50 @@
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+    font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI",
         "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
         "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+.todo {
+    &__sidebar {
+        background-color: #f4f6f8;
+        width: calc(200px - 40px);
+        height: calc(100% - 48px * 2);
+        border-right: 1px solid #f1f1f1;
+        padding: 48px 20px;
+    }
+
+    &__button {
+        color: #767676;
+        border: none;
+        background-color: inherit;
+        margin-left: 12px;
+        transition: opacity 0.3s ease;
+    }
+
+    &__button:hover {
+        cursor: pointer;
+        opacity: 0.7;
+    }
+
+    &__button-icon {
+        width: 10px;
+        height: 10px;
+        margin-right: 10px;
+    }
+
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 750px;
+    height: 530px;
+    transform: translate(-50%, -50%);
+    border-radius: 4px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.2px;
 }
