--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,10 @@
     //outline: 1px solid red;
 }
 
+input {
+    outline: none;
+}
+
 body {
     font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI",
         "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
