--- a/src/components/TasksHeader/TasksHeader.scss
+++ b/src/components/TasksHeader/TasksHeader.scss
@@ -15,8 +15,7 @@
             font-weight: bold;
             font-size: 32px;
             line-height: 39px;
-            margin: 0 auto;
-            /* identical to box height */
+            margin: 0 auto 20px auto;
 
             color: #c9d1d3;
         }
