--- a/src/index.scss
+++ b/src/index.scss
@@ -45,12 +45,16 @@ body {
         margin-right: 10px;
     }
 
+    &__tasks_invisible {
+        display: none;
+    }
+
     display: flex;
     position: absolute;
     left: 50%;
     top: 50%;
     width: 750px;
-    min-height: 530px;
+    height: calc(100vh - 100px);
     transform: translate(-50%, -50%);
     border-radius: 4px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
